[package]
name = "catcat"
description = "A version of the GNU/Linux cat command which also depicts a cat"
version = "0.2.0"
authors = ["lyra"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Miatonin/catcat/"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.14.0"